Fix nav button alignemnt

--- a/assets/css/layout/nav.less
+++ b/assets/css/layout/nav.less
@@ -38,6 +38,11 @@
     display: inline-block;
     border: 1px solid transparent;
 
+    .dropdown-menu-link {
+      margin-top: -4px;
+      line-height: 1.4;
+    }
+
     &:hover {
       background: @color-border--lightest-gray;
       border-color: @color-border--lightest-gray;
@@ -45,7 +50,10 @@
     }
 
     &:not(.btn) {
-      padding: 3px 8px; // same padding as .btn
+      height: 27px;
+      line-height: 27px;
+      vertical-align: middle;
+      padding: 0 8px;
     }
   }
 }
